--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -169,13 +169,24 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BoardController.cs" />
+    <Compile Include="Controllers\CondoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605222328328_InitialCreate.cs" />
+    <Compile Include="Migrations\201605222328328_InitialCreate.Designer.cs">
+      <DependentUpon>201605222328328_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606120503289_ForeignKey.cs" />
+    <Compile Include="Migrations\201606120503289_ForeignKey.Designer.cs">
+      <DependentUpon>201606120503289_ForeignKey.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BoardModel.cs" />
+    <Compile Include="Models\CondoModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -242,6 +253,11 @@
     <Content Include="Views\Board\Edit.cshtml" />
     <Content Include="Views\Board\Index.cshtml" />
     <Content Include="Views\Board\IndexByUser.cshtml" />
+    <Content Include="Views\Condo\Create.cshtml" />
+    <Content Include="Views\Condo\Delete.cshtml" />
+    <Content Include="Views\Condo\Details.cshtml" />
+    <Content Include="Views\Condo\Edit.cshtml" />
+    <Content Include="Views\Condo\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -253,6 +269,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605222328328_InitialCreate.resx">
+      <DependentUpon>201605222328328_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606120503289_ForeignKey.resx">
+      <DependentUpon>201606120503289_ForeignKey.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
