--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -170,25 +170,39 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BoardController.cs" />
     <Compile Include="Controllers\CondoController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TowerController.cs" />
+    <Compile Include="Controllers\UnitController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Membership\MembershipHandler.cs" />
     <Compile Include="Migrations\201605222328328_InitialCreate.cs" />
     <Compile Include="Migrations\201605222328328_InitialCreate.Designer.cs">
       <DependentUpon>201605222328328_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201606120503289_ForeignKey.cs" />
-    <Compile Include="Migrations\201606120503289_ForeignKey.Designer.cs">
-      <DependentUpon>201606120503289_ForeignKey.cs</DependentUpon>
+    <Compile Include="Migrations\201606200229028_v05.cs" />
+    <Compile Include="Migrations\201606200229028_v05.Designer.cs">
+      <DependentUpon>201606200229028_v05.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606200237337_v06.cs" />
+    <Compile Include="Migrations\201606200237337_v06.Designer.cs">
+      <DependentUpon>201606200237337_v06.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BoardModel.cs" />
+    <Compile Include="Models\CommonPlaceModel.cs" />
     <Compile Include="Models\CondoModel.cs" />
+    <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\TowerModel.cs" />
+    <Compile Include="Models\UnitModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -258,6 +272,26 @@
     <Content Include="Views\Condo\Details.cshtml" />
     <Content Include="Views\Condo\Edit.cshtml" />
     <Content Include="Views\Condo\Index.cshtml" />
+    <Content Include="Views\Unit\Create.cshtml" />
+    <Content Include="Views\Unit\Delete.cshtml" />
+    <Content Include="Views\Unit\Details.cshtml" />
+    <Content Include="Views\Unit\Edit.cshtml" />
+    <Content Include="Views\Unit\Index.cshtml" />
+    <Content Include="Views\Tower\Create.cshtml" />
+    <Content Include="Views\Tower\Delete.cshtml" />
+    <Content Include="Views\Tower\Details.cshtml" />
+    <Content Include="Views\Tower\Edit.cshtml" />
+    <Content Include="Views\Tower\Index.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\User\Delete.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\Employee\Create.cshtml" />
+    <Content Include="Views\Employee\Delete.cshtml" />
+    <Content Include="Views\Employee\Details.cshtml" />
+    <Content Include="Views\Employee\Edit.cshtml" />
+    <Content Include="Views\Employee\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -274,8 +308,11 @@
     <EmbeddedResource Include="Migrations\201605222328328_InitialCreate.resx">
       <DependentUpon>201605222328328_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201606120503289_ForeignKey.resx">
-      <DependentUpon>201606120503289_ForeignKey.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201606200229028_v05.resx">
+      <DependentUpon>201606200229028_v05.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606200237337_v06.resx">
+      <DependentUpon>201606200237337_v06.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
