--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\201606230243160_Borrow8.Designer.cs">
       <DependentUpon>201606230243160_Borrow8.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606240103007_v10.cs" />
+    <Compile Include="Migrations\201606240103007_v10.Designer.cs">
+      <DependentUpon>201606240103007_v10.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BoardModel.cs" />
@@ -373,6 +377,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606230243160_Borrow8.resx">
       <DependentUpon>201606230243160_Borrow8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606240103007_v10.resx">
+      <DependentUpon>201606240103007_v10.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
