--- a/CondoSimples/CondoSimples/Web.config
+++ b/CondoSimples/CondoSimples/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CondoSimples-20160520110334.mdf;Initial Catalog=aspnet-CondoSimples-20160520110334;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=tcp:condosimples.database.windows.net,1433;Initial Catalog=CondoSimples;User Id=bd_condosimples@condosimples.database.windows.net;Password=Condo$imples666;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
