--- a/CondoSimples/CondoSimples/Web.config
+++ b/CondoSimples/CondoSimples/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="defaultConnection" connectionString="Data Source=tcp:condosimples.database.windows.net,1433;Initial Catalog=CondoSimples;User Id=bd_condosimples@condosimples.database.windows.net;Password=Condo$imples666;"
+    <add name="defaultConnection" connectionString="Server=tcp:condosimples.database.windows.net,1433;Data Source=condosimples.database.windows.net;Initial Catalog=CondoSimples;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
