--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OutSourcerController.cs" />
     <Compile Include="Controllers\TowerController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -226,8 +227,21 @@
     <Compile Include="Migrations\201606240103007_v10.Designer.cs">
       <DependentUpon>201606240103007_v10.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606280148133_v101.cs" />
+    <Compile Include="Migrations\201606280148133_v101.Designer.cs">
+      <DependentUpon>201606280148133_v101.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606280228269_v102.cs" />
+    <Compile Include="Migrations\201606280228269_v102.Designer.cs">
+      <DependentUpon>201606280228269_v102.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606280245163_v103.cs" />
+    <Compile Include="Migrations\201606280245163_v103.Designer.cs">
+      <DependentUpon>201606280245163_v103.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AddressModel.cs" />
     <Compile Include="Models\BoardModel.cs" />
     <Compile Include="Models\BorrowModel.cs" />
     <Compile Include="Models\CommonPlaceModel.cs" />
@@ -235,6 +249,7 @@
     <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\OutSourcerModel.cs" />
     <Compile Include="Models\TowerModel.cs" />
     <Compile Include="Models\UnitModel.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -336,6 +351,14 @@
     <Content Include="Views\Borrow\Index.cshtml" />
     <Content Include="Views\Borrow\IndexByUser.cshtml" />
     <Content Include="Views\Borrow\Lended.cshtml" />
+    <Content Include="Views\OutSourcer\Create.cshtml" />
+    <Content Include="Views\OutSourcer\Delete.cshtml" />
+    <Content Include="Views\OutSourcer\Details.cshtml" />
+    <Content Include="Views\OutSourcer\Edit.cshtml" />
+    <Content Include="Views\OutSourcer\Index.cshtml" />
+    <Content Include="Views\Address\_CreatePartial.cshtml" />
+    <Content Include="Views\Address\_DetailsPartial.cshtml" />
+    <Content Include="Views\Address\_EditPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -381,6 +404,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606240103007_v10.resx">
       <DependentUpon>201606240103007_v10.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606280148133_v101.resx">
+      <DependentUpon>201606280148133_v101.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606280228269_v102.resx">
+      <DependentUpon>201606280228269_v102.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606280245163_v103.resx">
+      <DependentUpon>201606280245163_v103.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
