--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201607081912285_tentativa.Designer.cs">
       <DependentUpon>201607081912285_tentativa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607120154129_tower.cs" />
+    <Compile Include="Migrations\201607120154129_tower.Designer.cs">
+      <DependentUpon>201607120154129_tower.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AddressModel.cs" />
@@ -382,6 +386,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607081912285_tentativa.resx">
       <DependentUpon>201607081912285_tentativa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607120154129_tower.resx">
+      <DependentUpon>201607120154129_tower.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
