--- a/CondoSimples/CondoSimples/CondoSimples.csproj
+++ b/CondoSimples/CondoSimples/CondoSimples.csproj
@@ -243,6 +243,14 @@
     <Compile Include="Migrations\201607130024052_Notification.Designer.cs">
       <DependentUpon>201607130024052_Notification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607190253202_employee.cs" />
+    <Compile Include="Migrations\201607190253202_employee.Designer.cs">
+      <DependentUpon>201607190253202_employee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607190258039_user.cs" />
+    <Compile Include="Migrations\201607190258039_user.Designer.cs">
+      <DependentUpon>201607190258039_user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AddressModel.cs" />
@@ -434,6 +442,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607130024052_Notification.resx">
       <DependentUpon>201607130024052_Notification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607190253202_employee.resx">
+      <DependentUpon>201607190253202_employee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607190258039_user.resx">
+      <DependentUpon>201607190258039_user.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
